WIP: Use new function registry for cmp operators.